--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   margin: 0;
 }
 
+ul {
+  line-height: 1.5;
+}
+
 /* Стили для заголовков */
 h1, h2, h3, h4, h5, h6 {
   color: #444;
@@ -76,15 +80,41 @@ main {
   margin-bottom: 35px;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 415px) {
   .brand-title {
-    font-size: 5rem;
+    font-size: 60px;
     padding-top: 5rem;
   }
 
   .info-title {
     font-size: 60px;
     padding-top: 5rem;
+  }
+
+  .phone-ui {
+    max-width: 280px;
+    margin-top: -50px;
+  }
+
+  .card-2 {
+    max-width: 100px;
+  }
+}
+
+@media (min-width: 415px) {
+  .brand-title {
+    font-size: 80px;
+    padding-top: 5rem;
+  }
+
+  .info-title {
+    font-size: 60px;
+    padding-top: 5rem;
+  }
+
+  .phone-ui {
+    max-width: 350px;
+    margin-top: -50px;
   }
 }
 
@@ -98,6 +128,10 @@ main {
     font-size: 60px;
     padding-top: 5rem;
   }
+
+  .phone-ui {
+    margin-top: -60px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -109,6 +143,10 @@ main {
   .info-title {
     font-size: 85px;
     padding-top: 5rem;
+  }
+
+  .phone-ui {
+    margin-top: -70px;
   }
 }
 
@@ -138,7 +176,7 @@ main {
 }
 
 .black-btn {
-  border-radius: 40px;
+  border-radius: 50px;
   background: #1D1D1F;
   color: #fff;
   text-align: center;
@@ -180,7 +218,7 @@ main {
   /* max-width: 450px; */
   /* max-height: 420px; */
   /* min-width: 450px; */
-  border-radius: 25px;
+  border-radius: 35px;
   background: #191A1D;
   color: #fff;
   padding: 46px 46px 46px 66px;
@@ -226,8 +264,86 @@ main {
 
 /* Стили для подвала сайта */
 footer {
-  background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
+  background-color: #f5f5f7;
+  /* border-top: 1px solid #ddd; */
   padding: 20px 0;
-  text-align: center;
+  padding-top: 40px;
+  /* padding-bottom: 40px; */
+  /* padding: 40px; */
+}
+
+.frame-7 {
+  padding-bottom: 70px;
+}
+
+.ftr-jmp-list-h {
+  color: #000;
+  font-size: 16px;
+}
+
+.bottom-line {
+  padding-bottom: 35px;
+  border-bottom: 1px solid #929299;
+}
+
+.copyright-block {
+  padding: 0px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-weight: 400;
+}
+
+.copyright {
+  font-size: 13px;
+  margin: 0;
+  color: #626266;
+}
+
+.copyright-eula {
+  display: inline-block;
+  margin-left: 30px;
+}
+
+.copyright-eula-first {
+  margin-left: 0;
+}
+
+.br-c-p {
+  padding-left: 5px;
+  padding-right: 5px;
+  font-weight: 900;
+}
+
+.reg-selector {
+  color: #007BFF;
+}
+
+.more-apps {
+  padding-top: 80px;
+}
+
+.more-apps-title {
+  font-size: 50px;
+  font-weight: 600;
+  color: #000;
+  padding-bottom: 25px;
+}
+
+.app-card {
+  background-color: #f5f5f5;
+  padding: 55px 36px 55px 36px;
+  font-weight: 600;
+  border: 0px;
+  max-width: 300px;
+}
+
+.placeholder-more-apps {
+  color: #666;
+  font-size: 16px;
+  line-height: 1.5;
+  padding-bottom: 20px;
+}
+
+.card-container-more-apps {
+  max-width: 1000px;
 }
