--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 ul {
-  line-height: 1.5;
+  line-height: 2;
 }
 
 /* Стили для заголовков */
@@ -56,6 +56,14 @@ header {
   padding: 0px;
 }
 
+.navbar-toggler {
+  border: 0;
+}
+
+.footer-nav {
+  line-height: 1.5;
+}
+
 /* Стили для основного содержимого */
 main {
   padding: 0px 0px;
@@ -96,8 +104,31 @@ main {
     margin-top: -50px;
   }
 
+  .card-1 {
+    width: 150px;
+  }
+
   .card-2 {
-    max-width: 100px;
+    width: 200px;
+  }
+
+  .card-3 {
+    height: 170px;
+    padding-top: 20px;
+  }
+
+  .card-4 {
+    height: 150px;
+  }
+}
+
+@media (min-width: 415px) {
+  .card-1 {
+    width: 200px;
+  }
+
+  .card-2 {
+    width: 250px;
   }
 }
 
@@ -186,6 +217,10 @@ main {
   padding: 12px 40px;
 }
 
+.black-btn:hover {
+  background: #2f2f33;
+}
+
 .frame-2 {
   background: #121316;
 }
@@ -228,7 +263,7 @@ main {
 .card-title {
   color: #FFF;
   font-weight: 500;
-  font-size: 38px;
+  font-size: 36px;
   text-align: left;
 }
 
@@ -247,19 +282,20 @@ main {
   margin-top: 40px;
   margin-bottom: 20px;
 }
-
+  
 .card-3 {
-  max-height: 350px;
-  margin-top: -168px;
-  /* margin-right: -337px; */
-  margin-left: 200px;
-  /* margin-top: -150px; */
+  display: block;
+  max-height: 220px;
+  margin-left: auto;
+  margin-bottom: -46px;
 }
 
 .card-4 {
-  max-height: 300px;
-  margin-top: -168px;
-  margin-left: 200px;
+  display: block;
+  max-height: 220px;
+  margin-left: auto;
+  margin-bottom: -46px;
+  margin-right: -46px;
 }
 
 /* Стили для подвала сайта */
@@ -268,6 +304,7 @@ footer {
   /* border-top: 1px solid #ddd; */
   padding: 20px 0;
   padding-top: 40px;
+  padding-bottom: 10px;
   /* padding-bottom: 40px; */
   /* padding: 40px; */
 }
@@ -297,6 +334,7 @@ footer {
   font-size: 13px;
   margin: 0;
   color: #626266;
+  line-height: 1.4;
 }
 
 .copyright-eula {
@@ -316,6 +354,54 @@ footer {
 
 .reg-selector {
   color: #007BFF;
+}
+
+.supported-platforms-bg {
+  background-image: url(../img/bg-sup-platforms.png);
+  background-repeat: no-repeat;
+  background-position: left top;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  resize: none;
+}
+
+.supported-platforms {
+  max-width: 940px;
+  padding: 0px;
+}
+
+.box-sup-platf-tile {
+  padding-left: 0px;
+  padding-top: 90px;
+  max-width: max-content;
+}
+
+.box-sup-platf-p {
+  margin-left: auto;
+  padding-top: 0px;
+  padding-left: -5px;
+  padding-bottom: 75px;
+}
+
+.sup-platf-p {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.color-box-sup-platf-tile {
+  background-color: #006adb;
+  padding-left: 30px;
+  padding-right: 50px;
+  padding-top: 19px;
+  padding-bottom: 5px;
+  max-width: 595px;
+}
+
+.sup-platf-title {
+  font-size: 50px;
+  font-weight: 600;
 }
 
 .more-apps {
@@ -346,4 +432,130 @@ footer {
 
 .card-container-more-apps {
   max-width: 1000px;
+}
+
+.text-white-c {
+  color: #fff;
+}
+
+@media (max-width: 576px) {
+  .box-sup-platf-p {
+    margin-left: 0;
+    padding-bottom: 75px;
+  }
+}
+
+.newseller-bg {
+  background-color: #141414;
+}
+
+.newseller {
+  max-width: 940px;
+  padding-top: 0px;
+  padding-bottom: 100px;
+}
+
+.ns-title {
+  color: #007bff;
+  font-size: 50px;
+  max-width: 600px;
+  font-weight: 500;
+  padding-bottom: 25px;
+}
+
+.ns-p {
+  color: #fff;
+  font-size: 28px;
+  max-width: 600px;
+  font-weight: 400;
+}
+
+.form-label {
+  color: #fff;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  display: block;
+}
+
+.email-form {
+  border-radius: 5px;
+  background: #27272a;
+  color: #fff;
+  font-weight: 400;
+  font-size: 20px;
+  border: none;
+  padding: 9px 11px;
+  width: 380px;
+  display: block;
+}
+
+.email-error {
+  color: red;
+  padding-top: 5px;
+  display: none;
+}
+
+.in-dev-placeholder {
+  cursor: default;
+}
+
+.in-dev-placeholder-btn {
+  cursor: pointer;
+  background-color: #006adb;
+  border: 0px;
+  /* height: 38px; */
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.in-dev-placeholder-btn:hover {
+  background-color: #007bff;
+}
+
+.after-subs-form {
+  display: none;
+  padding-bottom: 55px;
+}
+
+.email-btn {
+  margin-top: 25px;
+  background-color: #27272a;
+  display: block;
+}
+
+@media (max-width: 420px) {
+  .ns-title {
+    font-size: 40px;
+  }
+  
+  .ns-p {
+    font-size: 24px;
+  }
+  
+  .mail-form {
+    max-width: 250px;
+  }
+}
+
+@media (max-width: 780px) {
+  .ns-p {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 576px) {
+  .ns-title {
+    font-size: 40px;
+  }
+  
+  .ns-p {
+    font-size: 28px;
+  }
+}
+
+.functionality {
+
 }
